Merged trunk changes r3304 through r3319, except the Guava library changes in r3305 and r3312, onto the 3.2.x release branch.